# CubeSat-Communication-Protocol

./: .gitignore  README.md
Cubesat Space Protocol/: README.md
Cubesat Space Protocol/Local Performance Test/: .gitignore  README.md
Cubesat Space Protocol/Local Performance Test/include/: client.h  csp_performance.h  server.h
Cubesat Space Protocol/Local Performance Test/src/: CMakeLists.txt  main.c
Cubesat Space Protocol/Named Pipe (FIFO) Routing/: CSP_fifo_routing  README.md
Cubesat Space Protocol/Named Pipe (FIFO) Routing/include/: csp_fifo_defs.h
Cubesat Space Protocol/Named Pipe (FIFO) Routing/src/: CMakeLists.txt  main.c
Linux Serial Ports/: README.md
Linux Serial Ports/1. Master-send slave-receive/: CMakeCache.txt  LibserialCXX  Makefile  README.md  cmake_install.cmake  main.c  master.c  pseudo-terminal  slave.c
Linux Serial Ports/1. Master-send slave-receive/include/: libserial_ext.hpp
Linux Serial Ports/1. Master-send slave-receive/src/: CMakeLists.txt  SerialPorts.h  libserial_ext.cpp  main.c  main.cpp  master.c  slave.c
Linux Serial Ports/2. Serial chat/: .gitignore  README.md
Linux Serial Ports/2. Serial chat/include/: SerialPorts.h  SerialPorts.hpp
Linux Serial Ports/2. Serial chat/src/: cpp_wrapper.cpp  main.c  main.cpp  master.c  slave.c
